# Programacion-orientada-objetos1

./: Boleteria.java  Calc.vb  README.md  pyproject.toml
020625buscaminas/ui/: created_grid.py  minas_ui.py
Calculadora14325.java/src/: Calculator.java  Operacion.java
Partial2.java/src/: Boleteria.java  Main.java
calculator/: trys.py
calculator/Calc1/LeCalculator2/: LeCalculator2.sln
dfd/: dejercicio2.dfd  ejercicio1DFD.dfd  ejercicio3.dfd
dfd/ejemplos/: ejemplo1.dfd  ejemplo2.dfd  ejemplo3.dfd  ejemplo4.dfd
esejo230525/src/: javaCopiarEditarpublic.java
partialcut2/: solutionPartial2
pobtaller2/: lucichartpobilove.docx  lucichartpobiloveT.docx  taller2pob1gavv.docx
pobtaller2/calculatorvb/: calculatorpob1.py
pobtaller2/pseint/1/: dotA.psc
pobtaller2/pseint/10/: main10.psc  main10A.psc
pobtaller2/pseint/11/: main11.psc  main11A.psc
pobtaller2/pseint/12/: main12.psc  main12A.psc
pobtaller2/pseint/13/: main13.psc  main13A.psc  main13C.psc
pobtaller2/pseint/14/: main14.psc  main14A.psc
pobtaller2/pseint/15/: CalculateDaysFixed.psc  main15.psc  main15B.psc
pobtaller2/pseint/16/: DiagramaDeFlujo.psc
pobtaller2/pseint/2/: codepseint2pbt2.psc  dotC.psc
pobtaller2/pseint/3/: dotb.psc  dotc.psc
pobtaller2/pseint/4/: dotb.psc
pobtaller2/pseint/5/: dota.psc
pobtaller2/python_code/: pyproject.toml
python/: factorial283225.py  migracióncodigo28325.py
python/040425/: calculator_python.py
python/280325/: factorial283225.py  minimo_comun_multiplo.py
python/300525/: formulario.py  formulary_2elements.py  frog.py  galaga.py  snake.py
(+43 files in other folders)
