[tool.poetry]
name = "programacion-orientada-objetos1"
version = "0.1.0"
description = ""
authors = ["gilem87 <andreovel205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
white = "^0.1.2"
black = "==25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
